# rssflow

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  deploy.sh  devenv.nix  docker-compose.yaml  flake.nix  rustfmt.toml
.github/: clippy.yml
.github/workflows/: audit.yml  clippy.yml  docker-publish.yml  fmt.yml  test.yml
.sqlx/: query-0021ef077a62c1094b98cc0ed8370b06fd630391e9b82a93d1a2587210c13f95.json  query-04ae5971d7fcc642ca412e22a219a54d7bd542dd399d6c1f74ac6af4ccf8b919.json  query-0cf1232104a4b6afcc344f8302f6e154633c82c1828e62a255236b982c22efb0.json  query-0f433e2e1d578b8de671ca9c481bdf750d92a406c83b47500c5dbb4a4ec7b99a.json  query-135b5c468ea89dc381d64c6bb5b95672d75c78451107f8dcc194356837215cec.json  query-16319babb196ce95aaf71a98f1ba795eac2ffe3f2bce97977de1f5d462682eb8.json  query-169714aa3b322fc6f3d6d50ee1db5b9becc2a6fa649448fa73001d5aab898b55.json  query-1cd789625f027e022b334630b3ffd3b9e34866e092aa59de99a8335e6ae42524.json  query-29d42747dc08bd6564b20374731f75f1729017d4b455fda733723c8e46584c29.json  query-3087016db33b9cffac4cc0be0099a467ee57c577c368754096750b746054b3ae.json  query-32f3333ff014e687f6e8ead050db39b92c68237a939fdf22c16e4a7e1d7c24d7.json  query-3a4fc563ae11c31b134720fd660ef3aabcd3f8c13961f472212236b7790ee527.json  query-42dfed469d9f4121212cc4627cbb4e950fbe45b133dfd182f34b4231f8cf7d49.json  query-443df26fbb205b2bbacebd048e77772bb02b2f030585fb003d06c13fdd77926a.json  query-4a49730dc99ab59ed65158455baa498466ad9cbdad7340b703f7a9ee5a151078.json  query-5064b5a4655796015bb22bb9da77ab67bcf9471b25eaa69a1516d74efe2d847f.json  query-651849064d5793dc74a4f05166edf66e4b2155e528a263fd6b99460f713a3988.json  query-660631cc6842e3b8d5966c8d3a1e0efdef579ea94ae51019f808f1871288ee0d.json  query-6df74ceb3cef4d61e7588ec05cfb24349f6f2fa9405faf9ca45ea9af8ed14dd8.json  query-7247b40efca530c2669788befa6bd6379b0e33bb33866cc988e5ab839446100e.json  query-78a258508ca9b7ebaa565da748c471de6b0dcc27b12a13c68a0e2e10300e09d3.json  query-7fe4a0139128657ec29554c25ab8a0b63699ca821b04791dba78bfb168444568.json  query-8ce1b94329c16c7c8b17feb29b4c62068f0150205d1c492cb3b7e1c06d230e25.json  query-92355361dec958a86b74a0a7442dafbb402cd44f45b2e4fefb882bffb007ab4b.json  query-9a8b42ec963c30ca62f7a1ae76bbd3c063b5db77e2a578e5400f5054c1235326.json  query-9d88c01d75afe1770d33978f2d0cf2f26dda8b925a55b51b54f4da10bc95e15f.json  query-9ef5f287edada4658b0dd9da7ebe678ba1abd3a01b46d15a37f9cf58568bac29.json  query-abb4470269623302c0f5380a15a0392a8d7498360f9ca04d39a7e9e7ddb71561.json  query-b917df993a380bb743846a97f511e9f02fea8ddafca497a57ec60f6933929287.json  query-b9a8aa4e20ae84927674f8f35fabb35825517e8df576298dbe14c1e1142c5859.json  query-c4864662b95cde8a51f79dfb80e17412c46c609af7b4911a24f9915d5d2b2e8a.json  query-c83723ff9c5231d337e70743fb51bf3559326778e7209839fd3d6715e436784d.json  query-d48eb9b89cb565a9c8849ba4be58df6d16151e0b46f541a161a2fa6cfe731cd8.json  query-f77f118786177a77f086bf1e17820d58d271ac4e80c999ebda39e4cc758abdd7.json
migrations/: 20240701193519_init.sql
server/: Cargo.toml
server/src/: app.rs  main.rs
server/src/pipeline/: cache.rs  definition.rs  feed.rs  filter.rs  mod.rs  retrieve.rs  wasm.rs
server/src/route/: mod.rs  pipe.rs
server/src/route/api/: mod.rs
services/dummy/: Cargo.toml
services/dummy/src/: main.rs
services/fetch/: Cargo.toml
services/fetch/src/: main.rs  service.rs
services/filter/: Cargo.toml
services/filter/src/: main.rs  service.rs
services/replace/: Cargo.toml
services/replace/src/: main.rs  service.rs
services/retrieve/: Cargo.toml
services/retrieve/src/: main.rs  service.rs
services/sanitise/: Cargo.toml
services/sanitise/src/: main.rs  service.rs
services/sanitize/: Cargo.toml
services/sanitize/src/: main.rs  service.rs
services/websub/: Cargo.toml
services/websub/.sqlx/: query-365b3977c86c46a232f7d4c6ef447458d9b8b9b90d8caa47924210d0bcedd4d0.json  query-48489d8892535abaecdabe0b53a23e9142cf296fa3dbb35c2e9354f05c9de9d7.json  query-6026b820ad36ca4ff7a28c292a85fa622022c142b6d6f6034e44d6c9c71d2db6.json  query-ad5fae2047d3dedaf13c8fe5b71ce63751a678c91c14c698e22bba197f671a9a.json  query-afc5b309485c1475d7328025bc1d7ae10c7b3e9aaca1f643debc29a09ab94de6.json  query-d2a6489c1e531e03295464031a74cfc3c065422364b1d0dd326836f0a42f354c.json
services/websub/migrations/: 20250426170952_init.sql
services/websub/src/: m.rs  main.rs  router.rs  service.rs  ws.rs
shared/proto/: Cargo.toml  build.rs
shared/proto/proto/: feed.proto  node.proto  registry.proto  websub.proto
shared/proto/src/: feed.rs  lib.rs
shared/service/: Cargo.toml
shared/service/src/: cache.rs  config.rs  lib.rs  service.rs  telemetry.rs
src/: app.rs  config.rs  convert.rs  flow.rs  main.rs  websub.rs
src/feed/: mod.rs
src/flow/: ai.rs  archive.rs  cache.rs  dummy.rs  feed.rs  filter.rs  html.rs  mod.rs  node.rs  replace.rs  retrieve.rs  sanitise.rs  seen.rs  wasm.rs
src/legacy/: ai.rs  wasm.rs
src/pipeline/: cache.rs  feed.rs  filter.rs  mod.rs  node.rs  retrieve.rs  sanitise.rs  wasm.rs
src/route/: flow.rs  mod.rs  websub.rs
src/route/api/: mod.rs
src/subscriber/: mod.rs
src/subscriber/websub/: mod.rs  router.rs
