[package]
name = "rssflow"
version.workspace = true
edition.workspace = true
description.workspace = true

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[workspace]
members = ["shared/*", "services/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Flow-based RSS feed aggregator/processor"

authors = ["m00nwtchr"]
license = "MPL-2"
homepage = "https://github.com/m00nwtchr/rssflow"
repository = "https://github.com/m00nwtchr/rssflow"


[workspace.dependencies]
# Common
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls", "json"] }
url = "*"
chrono = "0.4"
redis = { version = "0.29", features = ["tokio-comp", "json"] }

prost = "0.13"
prost-types = "0.13"

axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

tonic-build = "*"

anyhow = "1"
futures = "0.3"

## Service Common Deps
proto = { path = "shared/proto" }

tonic = "*"
tonic-health = "*"

tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1.44", default-features = false, features = ["rt-multi-thread", "macros"] }
##
atom_syndication = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
#default = ["filter", "retrieve", "sanitise"]
#filter = ["dep:regex", "dep:serde_regex"]
#retrieve = ["dep:scraper"]
#sanitise = ["dep:ammonia"]
#html = ["dep:scraper"]

[dependencies]
proto = { workspace = true, features = ["atom"] }

tonic.workspace = true
tonic-health.workspace = true
prost-types.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

tokio.workspace = true

## HTTP
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

##
reqwest.workspace = true
url.workspace = true

anyhow.workspace = true

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

confique = { version = "0.3", default-features = false, features = ["toml"] }

#uuid = { version = "1.15", features = ["serde", "v7"] }

atom_syndication.workspace = true

#feed-rs = { version = "2.3" }
#mediatype = "0.19"

#tokio-stream = { version = "0.1", features = ["sync"] }

#mimalloc = "0.1"

#strum = { version = "0.27", features = ["derive"] }
#derive_more = { version = "2", features = ["from"] }

