[package]
name = "rssflow"
publish = false
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[dependencies]
rssflow-service = { workspace = true, features = ["atom"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
atom_syndication = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow.workspace = true
axum.workspace = true
confique.workspace = true
prost-types.workspace = true

tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[workspace]
members = ["shared/*", "services/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Flow-based RSS feed aggregator/processor"
authors = ["m00nwtchr"]
license = "MPL-2"
homepage = "https://github.com/m00nwtchr/rssflow"
repository = "https://github.com/m00nwtchr/rssflow"

[workspace.dependencies]
rssflow-proto = { path = "shared/proto" }
rssflow-service = { path = "shared/service" }
prost = "0.13"
prost-types = "0.13"
axum = "0.8"
tonic = "*"
tonic-health = "*" # Cut
tokio = { version = "1.44", default-features = false, features = ["rt-multi-thread", "macros"] }
futures = "0.3"
tracing = "0.1"
anyhow = "1"
confique = { version = "0.3", default-features = false, features = ["toml"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls", "json"] }
redis = { version = "0.30", features = ["tokio-comp", "json"] }
url = "2.5"
chrono = "0.4"
# uuid = { version = "1.15", features = ["serde", "v7"] }
