[package]
name = "server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"

axum = { version = "0.7", features = ["macros"] }
futures = "0.3.30"
mimalloc = "0.1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls"]}
rss = { version = "2", features = ["url", "serde"] }
scraper = "0.19.0"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", ] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#typetag = "0.2.16"
url = { version = "2.5", features = ["serde"] }

wasmtime = "22"

[dev-dependencies]
ron = "0.8"
