[package]
name = "rssflow-fetch"
version.workspace = true
edition.workspace = true
description.workspace = true

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rssflow-service.workspace = true

tonic.workspace = true
tracing.workspace = true
tokio.workspace = true

## Node
rssflow-proto = { workspace = true, features = ["atom", "cache"] }

reqwest.workspace = true
url.workspace = true
atom_syndication = { workspace = true, features = ["with-serde"] }# Replace with feed-rs for broader feed compat

redis.workspace = true