[package]
name = "rssflow-fetch"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rssflow-service = { workspace = true, features = ["atom", "cache"] }
atom_syndication = { version = "0.12", features = ["with-serde"] } # Replace with feed-rs for broader feed compat
redis.workspace = true
reqwest.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true