[package]
name = "rssflow-filter"
version.workspace = true
edition.workspace = true
description.workspace = true

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rssflow-service.workspace = true

tonic.workspace = true
tracing.workspace = true
tokio.workspace = true

## Node
regex = "1.11.1"