[package]
name = "rssflow-replace"
version.workspace = true
edition.workspace = true
description.workspace = true

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
## Common
proto.workspace = true

tonic.workspace = true
tonic-health.workspace = true
prost-types.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

tokio.workspace = true

## Node
futures.workspace = true