[package]
name = "rssflow-replace"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
runesys.workspace = true

futures.workspace = true
rssflow-service.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true