[package]
name = "rssflow-retrieve"
version.workspace = true
edition.workspace = true
description.workspace = true

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rssflow-service.workspace = true

tonic.workspace = true
tracing.workspace = true
tokio.workspace = true

## Node
reqwest.workspace = true
scraper = "0.23"

redis.workspace = true

anyhow = "1"
futures.workspace = true
sha2 = "0.10"
base64 = "0.22"