[package]
name = "rssflow-retrieve"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
runesys.workspace = true

scraper = "0.23"
anyhow = "1"
sha2 = "0.10"
base64 = "0.22"
futures.workspace = true
redis.workspace = true
reqwest.workspace = true
rssflow-service.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true