[package]
name = "rssflow-sanitise"
version.workspace = true
edition.workspace = true
description.workspace = true

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rssflow-service.workspace = true

tonic.workspace = true
tracing.workspace = true
tokio.workspace = true

## Node
ammonia = "4.1"
futures.workspace = true