[package]
name = "rssflow-sanitize"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rssflow-service.workspace = true
runesys.workspace = true

ammonia = "4.1"
futures.workspace = true

tokio.workspace = true
tonic.workspace = true
tracing.workspace = true