[package]
name = "rssflow-websub"
version = "0.1.0"
edition = "2024"

[features]
sha1 = ["dep:sha1"]

[dependencies]
## Common
proto.workspace = true

tonic.workspace = true
tonic-health.workspace = true
prost-types.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

tokio.workspace = true
tokio-stream = "0.1"

## Node
reqwest.workspace = true
url.workspace = true

chrono.workspace = true
uuid = { version = "1.15", features = ["serde", "v7"] }
anyhow.workspace = true

hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha1 = { version = "0.10", optional = true }

serde = { version = "1", features = ["derive"] }
serde_with = "3.12"

### HTTP Endpoint
axum.workspace = true
tower.workspace = true
tower-http.workspace = true