[package]
name = "rssflow-websub"
version.workspace = true
edition.workspace = true
description.workspace = true

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["sha1"]
sha1 = ["dep:sha1"]

[dependencies]
rssflow-service.workspace = true

tonic.workspace = true
prost-types.workspace = true

tracing.workspace = true
tokio.workspace = true

## Node
reqwest.workspace = true
url.workspace = true
tokio-stream = "0.1"

uuid = { version = "1.15", features = ["serde", "v7"] }
anyhow.workspace = true

hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha1 = { version = "0.10", optional = true }

serde = { version = "1", features = ["derive"] }
serde_with = "3.12"

### HTTP Endpoint
axum.workspace = true
tower.workspace = true
tower-http.workspace = true