[package]
name = "rssflow-websub"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["sha1"]
sha1 = ["dep:sha1"]

[dependencies]
tokio-stream = "0.1"
uuid = { version = "1.15", features = ["serde", "v7"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha1 = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_with = "3.12"
anyhow.workspace = true
axum.workspace = true
prost-types.workspace = true
reqwest.workspace = true
rssflow-service = { workspace = true, features = ["db"] }
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
sqlx.workspace = true
rand = "0.9.1"
base64 = "0.22.1"