[package]
name = "proto"
version = "0.1.0"
edition = "2024"

[features]
atom = ["dep:atom_syndication"]

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

atom_syndication = { workspace = true, optional = true }
chrono.workspace = true

anyhow.workspace = true

#[target.'cfg(debug_assertions)'.dependencies]
tonic-reflection = "0.13"

[build-dependencies]
tonic-build.workspace = true