[package]
name = "rssflow-proto"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
atom = ["dep:atom_syndication"]


[dependencies]
atom_syndication = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"] }
anyhow.workspace = true
chrono.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build = "*"