[package]
name = "rssflow-service"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["tracing", "telemetry", "http"]
http = ["runesys/http"]
tracing = ["runesys/tracing"]
telemetry = ["runesys/telemetry"]
cache = ["runesys/cache"]
db = ["runesys/db"]

atom = ["rssflow-proto/atom"]

[dependencies]
runesys.workspace = true
rssflow-proto.workspace = true

tokio.workspace = true

tonic.workspace = true
tonic-health.workspace = true
prost-types.workspace = true
prost.workspace = true

anyhow.workspace = true

figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
url = { workspace = true, features = ["serde"] }
futures = "0.3.31"